# HC-NAM-Base

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateHeaderFromModel.py  OB1 Mesa DC-5 PM.nam  README.md  main.cpp
HCNAMBase/: LayerConfig.hpp  NAMMathsProvider.hpp  main.cpp  weights.hpp
plugin/: CMakeLists.txt  CPM.cmake  plugin.cpp  plugin.h
wavenet/: tcn_load_model.hpp  wavenet_layer.hpp  wavenet_layer_array.hpp  wavenet_model.hpp
